force-app/main/default/objects/Strategy_Plan_Forecast_Competitor_Info__c/Strategy_Plan_Forecast_Competitor_Info__c.object-meta.xml
<CustomObject>
    <label>Strategy Plan Forecast &amp; Competitor Info</label>
    <nameField>
        <label>Strategy Plan Forecast &amp; Competitor Info</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Strategy Plan Forecast &amp; Competitor Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>