force-app/main/default/objects/Strategy_Plan_Forecast_Competitor_Info__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Competitor of LOB</description>
    <label>Competitor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>CLH Competitor, UMO Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>StrategyPlan Forecasts &amp; Competitor Info</relationshipLabel>
    <relationshipName>StrategyPlan_Forecasts_Competitor_Info</relationshipName>
    <type>Lookup</type>
</CustomField>