force-app/main/default/objects/Strategy_Plan_Forecast_Competitor_Info__c/fields/Competitor_percentage_of_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Competitor_percentage_of_Wallet__c</fullName>
    <label>Competitor % of Wallet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>