force-app/main/default/objects/Strategy_Plan_Forecast_Competitor_Info__c/fields/Current_New_LOB__c.field-meta.xml
<CustomField>
    <fullName>Current_New_LOB__c</fullName>
    <label>Current / New LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current LOB</fullName>
            </value>
            <value>
                <fullName>New LOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>