force-app/main/default/objects/Strategy_Plan_Forecast_Competitor_Info__c/fields/Current_Year_plus_1_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_plus_1_Forecast__c</fullName>
    <label>Current Year + 1 Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>