force-app/main/default/objects/Strategy_Plan_Forecast_Competitor_Info__c/fields/FY_Current_Spend__c.field-meta.xml
<CustomField>
    <fullName>FY_Current_Spend__c</fullName>
    <label>FY Current Spend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>