force-app/main/default/objects/Strategy_Plan_Forecast_Competitor_Info__c/fields/FY_Total_Wallet__c.field-meta.xml
<CustomField>
    <fullName>FY_Total_Wallet__c</fullName>
    <formula>FY_Current_Spend__c  +  FY_White_Space__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FY Total Wallet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>