force-app/main/default/objects/Strategy_Plan_Forecast_Competitor_Info__c/fields/FY_White_Space__c.field-meta.xml
<CustomField>
    <fullName>FY_White_Space__c</fullName>
    <label>FY White Space</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>