force-app/main/default/objects/Strategy_Plan_Forecast_Competitor_Info__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airborne Imaging</fullName>
            </value>
            <value>
                <fullName>Allied Product Sales</fullName>
            </value>
            <value>
                <fullName>Antifreeze Sales</fullName>
            </value>
            <value>
                <fullName>Base Oil Sales</fullName>
            </value>
            <value>
                <fullName>Blended Oil Sales</fullName>
            </value>
            <value>
                <fullName>Blended Oil Sales – Direct</fullName>
            </value>
            <value>
                <fullName>Bulk Services</fullName>
            </value>
            <value>
                <fullName>Catalyst Services</fullName>
            </value>
            <value>
                <fullName>Catalysts Treatment</fullName>
            </value>
            <value>
                <fullName>Charge for Oil Revenue</fullName>
            </value>
            <value>
                <fullName>Chemical Cleaning</fullName>
            </value>
            <value>
                <fullName>CleanPack</fullName>
            </value>
            <value>
                <fullName>Container Services</fullName>
            </value>
            <value>
                <fullName>Containerized Waste Services</fullName>
            </value>
            <value>
                <fullName>Contract Blending &amp; Packaging</fullName>
            </value>
            <value>
                <fullName>Daylighting Services</fullName>
            </value>
            <value>
                <fullName>Direct Ship</fullName>
            </value>
            <value>
                <fullName>Directional Boring</fullName>
            </value>
            <value>
                <fullName>Downhole Services</fullName>
            </value>
            <value>
                <fullName>Drill Camps and Catering</fullName>
            </value>
            <value>
                <fullName>Drill Support Services</fullName>
            </value>
            <value>
                <fullName>Drum Services</fullName>
            </value>
            <value>
                <fullName>Emergency Response Services</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Field Services</fullName>
            </value>
            <value>
                <fullName>Filtration &amp;Treatment Services</fullName>
            </value>
            <value>
                <fullName>Healthcare - RMW</fullName>
            </value>
            <value>
                <fullName>Healthcare Mailback</fullName>
            </value>
            <value>
                <fullName>High Hazardous Services</fullName>
            </value>
            <value>
                <fullName>Household Hazardous Waste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>