force-app/main/default/objects/Strategy_Plan_Forecast_Competitor_Info__c/fields/Percentage_of_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Wallet__c</fullName>
    <formula>Current_Year_Forecast__c / FY_Total_Wallet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Wallet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>