force-app/main/default/objects/Strategy_Plan_Forecast_Competitor_Info__c/fields/Strategic_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account_Plan__c</fullName>
    <label>Strategic Account Plan</label>
    <referenceTo>Strategic_Account_Plan__c</referenceTo>
    <relationshipName>Strategy_Plan_Forecasts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>