force-app/main/default/objects/Strategy_Plan_Forecast_Competitor_Info__c/fields/Strength_Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Strength_Weaknesses__c</fullName>
    <label>Strength / Weaknesses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>