force-app/main/default/objects/Strategy_Plan_Forecast_Competitor_Info__c/recordTypes/Competitor_Information.recordType-meta.xml
<RecordType>
    <fullName>Competitor_Information</fullName>
    <active>true</active>
    <label>Competitor Information</label>
</RecordType>