force-app/main/default/objects/Strategy_Plan_Forecast_Competitor_Info__c/recordTypes/Strategy_Plan_Forecast.recordType-meta.xml
<RecordType>
    <fullName>Strategy_Plan_Forecast</fullName>
    <active>true</active>
    <label>Strategy Plan Forecast</label>
</RecordType>